--- a/diary/vin-02-07.md
+++ b/diary/vin-02-07.md
@@ -16,6 +16,10 @@ Docker-Setup für das komplette Loop-It Stack (Backend, Frontend, PostgreSQL) en
 - **End-to-End funktional**: User-Registrierung über Frontend erfolgreich getestet
 - **Kompletter Stack dockerisiert**: Frontend, Backend, PostgreSQL kommunizieren über Docker-Netzwerk
 
+![image](https://github.com/user-attachments/assets/7e7dc5a7-422f-4511-9959-5538d7007b5f)
+
+![image](https://github.com/user-attachments/assets/c02f5dec-f575-4e2e-8875-0367adbeaef9)
+
 ## Herausforderungen & Blockaden - Wo hing ich fest?
 - **Heißer Tag**: Hohe Temperaturen erschwerten die Konzentration 🥵
 - **React-Doppelimport**: `jsxInject` vs. manuelle React-Imports verursachten Build-Fehler
