--- a/docs/diaries/vin/vin-09-07.md
+++ b/docs/diaries/vin/vin-09-07.md
@@ -18,7 +18,9 @@
 - System-Metriken (CPU, Memory, Node.js Stats) werden gesammelt
 - Grafana Dashboard zeigt Echtzeitdaten der Loop-It App
 - Prometheus und Grafana latest erfolgreich deployed
-- Docker-Compose-Setup für Monitoring-Stack komplett
+
+![image](https://github.com/user-attachments/assets/4111a922-e372-42fb-bf89-f0c58bb88fce)
+
 
 ## Herausforderungen & Blockaden - Wo hing ich fest?
 
