--- a/docs/diaries/vin/vin-09-07.md
+++ b/docs/diaries/vin/vin-09-07.md
@@ -21,6 +21,9 @@
 
 ![image](https://github.com/user-attachments/assets/4111a922-e372-42fb-bf89-f0c58bb88fce)
 
+![image](https://github.com/user-attachments/assets/c3999276-6e69-4081-9636-adaa05c0b619)
+
+
 
 ## Herausforderungen & Blockaden - Wo hing ich fest?
 
